Kubernetes/Project/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx  
    nginx.ingress.kubernetes.io/use-regex: "true"  
    nginx.ingress.kubernetes.io/rewrite-target: /$1  
spec:
  rules:
    - http:
        paths:
          - path: /  
            pathType: Prefix  
            backend:
              service:
                name: api  
                port:
                  number: 3000
